# KUP

./: .gitignore
.github/workflows/: rust.yml
Assignments/Assignment-10/: Cargo.toml
Assignments/Assignment-10/src/: lib.rs  test.rs
Assignments/Assignment-10/src/recursive_op/: nth_element.rs  odd_number.rs  repeat_number.rs  second_repeat_numbers.rs
Assignments/Assignment-11/: Cargo.toml
Assignments/Assignment-11/src/: lib.rs  test.rs
Assignments/Assignment-12/: Cargo.toml
Assignments/Assignment-12/src/: lib.rs  test.rs
Assignments/Assignment-9/src/: lib.rs  test.rs
Assignments/Assignment_9/src/: lib.rs  test.rs
Assignments/armstrong_number/: Cargo.toml
Assignments/armstrong_number/src/: main.rs  matrix1  matrix2  operations.rs  test.rs
Assignments/even_check/: Cargo.toml
Assignments/even_check/src/: lib.rs  test.rs
Assignments/generic_traits/: Cargo.toml
Assignments/generic_traits/src/: lib.rs  test.rs
Assignments/json_rust/: Cargo.toml
Assignments/json_rust/src/: main.rs  module.rs  test.rs
Assignments/json_rust/src/source_code/: module.rs
Assignments/odd_even/: Cargo.toml
Assignments/odd_even/src/: lib.rs  test.rs
Assignments/post_rust/: Cargo.toml
Assignments/post_rust/src/: main.rs
Assignments/post_rust_lib/: Cargo.toml
Assignments/post_rust_lib/src/: info.rs  lib.rs  post_rust.rs  test.rs
Assignments/task-1/: Cargo.toml
Assignments/task-1/src/: lib.rs  main.rs  test.rs
Assignments/task-1/src/question/: insert.rs  (+1 more)
Assignments/update_delete_api/: Cargo.toml
Assignments/update_delete_api/src/: main.rs  test.rs
(+28 files in other folders)
