[package]
name = "json_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9.0"
log = "0.4.14"
